--- a/jointformer.yml
+++ b/jointformer.yml
@@ -1,24 +1,28 @@
-name: jointformer
+name: jointformer-experiments
 channels:
+  - defaults
   - conda-forge
   - huggingface
   - nvidia
   - pytorch
 dependencies:
-  - python
-  - pytorch=2.3
-  - torchvision
-  - torchaudio
-  - pytorch-cuda=11.8
-  - rdkit
   - deepchem
-  - transformers
+  - fcd==1.2
+  - guacamol
   - ipykernel
   - jupyterlab
-  - numpy
-  - scipy
-  - pandas
   - matplotlib
+  - numpy<2.0
+  - pandas==1.5.3
+  - python
+  - pytorch==2.2.2
+  - torchvision==0.17.2
+  - torchaudio==2.2.2
+  - pytorch-cuda=11.8
+  - rdkit=2023.9.2
+  - scipy=1.10.1
   - seaborn
   - tqdm
+  - transformers
   - wandb
+  - optuna
