--- a/configs/models/jointformer/config.json
+++ b/configs/models/jointformer/config.json
@@ -1,5 +1,5 @@
 {
-  "model_name": "Jointformer",
+  "model_name": "JointformerV2",
   "bias": false,
   "attention_dropout": 0.0,
   "feed_forward_dropout": 0.0,
