--- a/configs/models/gpt_prediction/config.json
+++ b/configs/models/gpt_prediction/config.json
@@ -2,6 +2,7 @@
   "model_name": "GPTForDownstreamPrediction",
   "bias": false,
   "dropout": 0.1,
+  "pooler_dropout": 0.1,
   "embedding_dim": 256,
   "embedding_hidden_dim": 1024,
   "layer_norm_eps": 1e-05,
