--- a/configs/models/jointformer/config.json
+++ b/configs/models/jointformer/config.json
@@ -1,17 +1,14 @@
 {
-  "model_name": "JointformerV2",
+  "model_name": "JointformerWithPrefix",
   "bias": false,
-  "attention_dropout": 0.0,
-  "feed_forward_dropout": 0.0,
+  "attention_dropout": 0.2,
+  "feed_forward_dropout": 0.2,
   "embedding_dim": 256,
-  "embedding_hidden_dim": null,
+  "embedding_hidden_dim": 768,
   "layer_norm_eps": 1e-05,
   "max_seq_len": 128,
   "num_heads": 8,
   "num_layers": 8,
-  "vocab_size": 593,
-  "prediction_task_type": "regression",
-  "num_prediction_tasks": 1,
-  "num_physchem_tasks": 200,
-  "prediction_hidden_dim": 256
+  "vocab_size": 596,
+  "num_physchem_tasks": 200
 }
