--- a/configs/trainers/pretrain_generation_mlm_physchem/config.json
+++ b/configs/trainers/pretrain_generation_mlm_physchem/config.json
@@ -1,11 +1,11 @@
 {
   "compile": true,
-  "enable_ddp": false,
+  "enable_ddp": true,
   "dtype": "bfloat16",
   "eval_only": false,
-  "max_iters": 50000,
+  "max_iters": 200000,
   "max_epochs": null,
-  "batch_size": 512,
+  "batch_size": 1024,
   "learning_rate": 6e-4,
   "weight_decay": 1e-1,
   "beta1": 0.9,
@@ -14,7 +14,7 @@
   "grad_clip": 1.0,
   "decay_lr": true,
   "warmup_iters": 2500,
-  "lr_decay_iters": 50000,
+  "lr_decay_iters": 200000,
   "min_lr": 6e-5,
   "eval_iters": 20,
   "eval_interval": 2500,
@@ -25,9 +25,9 @@
   "block_size": 128,
   "tasks":
     {
-      "generation":  75,
-      "reconstruction": 12,
-      "physchem": 12
+      "generation":  8,
+      "reconstruction": 1,
+      "physchem": 1
     },
-  "save_snapshot": false
+  "save_snapshot": true
 }
