--- a/configs/trainers/finetune/config.json
+++ b/configs/trainers/finetune/config.json
@@ -5,24 +5,24 @@
   "eval_only": false,
   "max_iters": 60000,
   "max_epochs": 20,
-  "batch_size": 32,
-  "learning_rate": 6e-4,
+  "batch_size": 64,
+  "learning_rate": 6e-5,
   "weight_decay": 1e-1,
   "beta1": 0.9,
   "beta2": 0.95,
   "gradient_accumulation_steps": 1,
   "grad_clip": 1.0,
-  "decay_lr": true,
+  "decay_lr": false,
   "warmup_iters": 6000,
   "lr_decay_iters": 60000,
-  "min_lr": 6e-6,
+  "min_lr": 6e-5,
   "eval_iters": 48,
   "eval_interval": 50,
   "log_interval": 50,
   "always_save_checkpoint": false,
   "save_checkpoint": true, 
   "save_checkpoint_every": 10000,
-  "block_size": 256,
+  "block_size": 128,
   "tasks":
     {
       "prediction": 1
