--- a/configs/models/jointformer_small/config.json
+++ b/configs/models/jointformer_small/config.json
@@ -1,15 +1,14 @@
 {
-  "model_name": "JointformerLlamaForDownstreamPrediction",
+  "model_name": "JointformerWithPrefix",
   "bias": false,
   "attention_dropout": 0.0,
   "feed_forward_dropout": 0.0,
   "embedding_dim": 256,
-  "embedding_hidden_dim": 1024,
+  "embedding_hidden_dim": 768,
   "layer_norm_eps": 1e-05,
   "max_seq_len": 128,
   "num_heads": 8,
   "num_layers": 8,
   "vocab_size": 596,
-  "num_physchem_tasks": 200,
-  "pooler_dropout": 0.0
+  "num_physchem_tasks": 200
 }
