add final results

--- a/configs/trainers/finetune/config.json
+++ b/configs/trainers/finetune/config.json
@@ -1,10 +1,10 @@
 {
   "compile": true,
   "enable_ddp": false,
-  "dtype": "bfloat16",
+  "dtype": "float32",
   "eval_only": false,
   "max_iters": 60000,
-  "max_epochs": 20,
+  "max_epochs": 100,
   "batch_size": 64,
   "learning_rate": 6e-5,
   "weight_decay": 1e-1,
@@ -12,11 +12,11 @@
   "beta2": 0.95,
   "gradient_accumulation_steps": 1,
   "grad_clip": 1.0,
-  "decay_lr": false,
+  "decay_lr": true,
   "warmup_iters": 6000,
   "lr_decay_iters": 60000,
   "min_lr": 6e-5,
-  "eval_iters": 48,
+  "eval_iters": 24,
   "eval_interval": 50,
   "log_interval": 50,
   "always_save_checkpoint": false,
