--- a/configs/trainers/pretrain_generation_mlm_physchem_ddp/config.json
+++ b/configs/trainers/pretrain_generation_mlm_physchem_ddp/config.json
@@ -1,12 +1,12 @@
 {
   "compile": true,
-  "enable_ddp": false,
+  "enable_ddp": true,
   "dtype": "bfloat16",
   "eval_only": false,
   "max_iters": 50000,
   "max_epochs": null,
-  "batch_size": 512,
-  "learning_rate": 6e-4,
+  "batch_size": 2048,
+  "learning_rate": 1e-4,
   "weight_decay": 1e-1,
   "beta1": 0.9,
   "beta2": 0.95,
@@ -15,19 +15,19 @@
   "decay_lr": true,
   "warmup_iters": 2500,
   "lr_decay_iters": 50000,
-  "min_lr": 6e-5,
+  "min_lr": 1e-5,
   "eval_iters": 20,
   "eval_interval": 2500,
   "log_interval": 1000,
   "always_save_checkpoint": false,
-  "save_checkpoint_every": 50000,
+  "save_checkpoint_every": 25000,
   "save_checkpoint": true,
   "block_size": 128,
   "tasks":
     {
-      "generation":  75,
-      "reconstruction": 12,
-      "physchem": 12
+      "generation":  8,
+      "reconstruction": 1,
+      "physchem": 1
     },
   "save_snapshot": true
 }
