--- a/configs/trainers/predictive/config.json
+++ b/configs/trainers/predictive/config.json
@@ -1,10 +1,10 @@
 {
   "compile": true,
   "enable_ddp": false,
-  "dtype": "bfloat16",
+  "dtype": "float32",
   "eval_only": false,
   "max_iters": 60000,
-  "max_epochs": 10,
+  "max_epochs": 20,
   "batch_size": 64,
   "learning_rate": 6e-5,
   "weight_decay": 1e-1,
@@ -12,7 +12,7 @@
   "beta2": 0.95,
   "gradient_accumulation_steps": 1,
   "grad_clip": 1.0,
-  "decay_lr": false,
+  "decay_lr": true,
   "warmup_iters": 6000,
   "lr_decay_iters": 60000,
   "min_lr": 6e-6,
