--- a/configs/trainers/molecule_net/jointformer_best_big/joint/hiv/config.json
+++ b/configs/trainers/molecule_net/jointformer_best_big/joint/hiv/config.json
@@ -4,19 +4,19 @@
   "dtype": "float32",
   "eval_only": false,
   "max_iters": 60000,
-  "max_epochs": 10,
-  "batch_size": 16,
-  "learning_rate": 4e-5,
+  "max_epochs": 20,
+  "batch_size": 64,
+  "learning_rate": 6e-5,
   "weight_decay": 1e-1,
   "beta1": 0.9,
   "beta2": 0.95,
   "gradient_accumulation_steps": 1,
   "grad_clip": 1.0,
-  "decay_lr": true,
+  "decay_lr": false,
   "warmup_iters": 6000,
   "lr_decay_iters": 60000,
-  "min_lr": 4e-6,
-  "eval_iters": 24,
+  "min_lr": 6e-5,
+  "eval_iters": 48,
   "eval_interval": 50,
   "log_interval": 50,
   "always_save_checkpoint": false,
