fix generation decoding

--- a/configs/datasets/guacamol/config.json
+++ b/configs/datasets/guacamol/config.json
@@ -4,7 +4,7 @@
   "val_data_path": "guacamol/val.npz",  
   "test_data_path": "guacamol/test.npz",
   "data_key": "smiles",
-  "target_key": null,
+  "target_key": "target",
   "prediction_task_type": null,
   "test_metric": null,
   "num_prediction_tasks": null,
