--- a/configs/tokenizers/amino_acid/config.json
+++ b/configs/tokenizers/amino_acid/config.json
@@ -1,9 +1,4 @@
 {
-    "tokenizer_type": "HFTokenizer",
-    "vocabulary_path": "facebook/esm2_t33_650M_UR50D",
-    "max_length": 1024,
-    "kwargs": {
-        "use_fast": true,
-        "trust_remote_code": true
-    }
+    "tokenizer_type": "AATokenizer",
+    "vocabulary_path": "data/vocabulary/aa.txt"
 } 
