Update prediction head init

--- a/configs/trainers/distribution_learning/guacamol/combined/config.json
+++ b/configs/trainers/distribution_learning/guacamol/combined/config.json
@@ -5,7 +5,9 @@
   "max_epochs": 40,
   "tasks": 
     {
-      "lm": 1
+      "lm": 8,
+      "mlm": 1,
+      "prediction": 1
     },
   "compile": true,
   "enable_ddp": false, 
