--- a/configs/trainers/distribution_learning/guacamol/lm/h100/config.json
+++ b/configs/trainers/distribution_learning/guacamol/lm/h100/config.json
@@ -1,24 +1,22 @@
 {
   "batch_size": 1024,
   "learning_rate": 4e-4,
-  "weight_decay": 1e-2,
+  "weight_decay": 1e-1,
   "max_epochs": 40,
   "tasks": 
     {
-      "lm": 75,
-      "mlm": 15,
-      "prediction": 10
+      "lm": 1
     },
   "compile": true,
   "enable_ddp": false, 
-  "dtype": "bfloat16",
+  "dtype": "float32",
   "num_workers": 16,
   "beta1": 0.9,
   "beta2": 0.95,
   "gradient_accumulation_steps": 1,
   "grad_clip": 1.0,
   "decay_lr": true,
-  "log_interval": 200,
+  "log_interval": 100,
   "save_interval": 10,
-  "warmup_iters": 2500
+  "min_lr": 1e-6
 }
