--- a/configs/trainers/property_prediction/molecule_net/bace/config.json
+++ b/configs/trainers/property_prediction/molecule_net/bace/config.json
@@ -1,22 +1,22 @@
 {
-  "batch_size": 4,
-  "learning_rate": 1e-3,
+  "batch_size": 512,
+  "learning_rate": 6e-4,
   "weight_decay": 1e-1,
-  "max_epochs": 2,
+  "max_epochs": 20,
   "tasks": 
     {
-      "lm": 8
+      "prediction": 1
     },
   "compile": true,
   "enable_ddp": false, 
-  "dtype": "float16",
-  "num_workers": 1,
+  "dtype": "float32",
+  "num_workers": 16,
   "beta1": 0.9,
   "beta2": 0.95,
   "gradient_accumulation_steps": 1,
   "grad_clip": 1.0,
   "decay_lr": true,
-  "warmup_iters": 6,
-  "min_lr": 1e-6,
-  "log_interval": 1
+  "log_interval": 200,
+  "save_interval": 100,
+  "min_lr": 1e-6
 }
