--- a/configs/trainers/distribution_learning/unimol/lm/config.json
+++ b/configs/trainers/distribution_learning/unimol/lm/config.json
@@ -1,22 +1,23 @@
 {
   "batch_size": 512,
-  "learning_rate": 2e-5,
+  "learning_rate": 6e-4,
   "weight_decay": 1e-1,
   "max_epochs": 40,
   "tasks": 
     {
-      "prediction": 1
+      "lm": 1
     },
   "compile": true,
   "enable_ddp": false, 
-  "dtype": "float32",
+  "dtype": "bfloat16",
   "num_workers": 16,
   "beta1": 0.9,
   "beta2": 0.95,
   "gradient_accumulation_steps": 1,
   "grad_clip": 1.0,
   "decay_lr": true,
-  "log_interval": 200,
-  "save_interval": 100,
-  "min_lr": 1e-6
+  "log_interval": 2000,
+  "save_interval": 20,
+  "min_lr": 6e-5,
+  "warmup_iters": 5000
 }
