--- a/hyformer.yml
+++ b/hyformer.yml
@@ -1,29 +1,23 @@
-name: hyformer-neurips25-experiments
+name: hyformer-neurips25
 channels:
-  - defaults
   - conda-forge
-  - huggingface
-  - nvidia
-  - pytorch
 dependencies:
-  - deepchem
-  - fcd==1.2
-  - guacamol
-  - ipykernel
-  - jupyterlab
-  - matplotlib
-  - numpy<2.0
+  - python=3.10
+  - pip
+  - numpy>=1.26,<2.0
   - pandas==1.5.3
-  - python
-  - pytorch==2.2.2
-  - torchvision==0.17.2
-  - torchaudio==2.2.2
-  - pytorch-cuda=11.8
   - rdkit=2023.9.2
   - scipy=1.10.1
-  - seaborn
   - tqdm
   - transformers
   - wandb
-  - tensorflow==2.9.1
-  - molecule-generation
+  - pip:
+    - --extra-index-url https://download.pytorch.org/whl/cu118
+    - torch==2.2.2+cu118
+    - torchvision==0.17.2+cu118
+    - torchaudio==2.2.2+cu118
+    - deepchem
+    - guacamol 
+    - fcd==1.2
+    - -e .
+  
