--- a/hyformer.yml
+++ b/hyformer.yml
@@ -16,7 +16,7 @@ dependencies:
     - torch==2.2.2+cu118
     - torchvision==0.17.2+cu118
     - torchaudio==2.2.2+cu118
-    - deepchem
+    - deepchem==2.8.0
     - guacamol 
     - fcd==1.2
     - -e .
